--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -33,6 +33,11 @@ jobs:
           hugo-version: '0.148.1'
           extended: true
 
+      - name: Clone theme submodule
+        run: |
+          mkdir themes
+          git clone https://github.com/adityatelange/hugo-PaperMod themes/PaperMod --depth=1
+
       - name: Build
         run: hugo --minify
       
