--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: /
+baseURL: https://charlescsr.github.io/india-2-manchester/the-pentagon-conquest
 languageCode: en-us
 title: The Pentagon Conquest
 
